hard-gists/6374514/run.log
=== Docker Run Log for 6374514 ===
Started at: Mi 29. Okt 16:28:52 CET 2025

[2025-10-29 16:28:53] START: Running container for 6374514
[2025-10-29 16:28:53] SUCCESS: Container fb9e3931478b8429b68f3ef3d223c679024b20f81ec9d6045a394dc93435a636 started for 6374514
=== Container logs for 6374514 ===
  File "/snippet.py", line 6
    print "fetcher: Fetching..."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6374514 ===
[2025-10-29 16:28:55] INFO: Container fb9e3931478b8429b68f3ef3d223c679024b20f81ec9d6045a394dc93435a636 has stopped
